# RogueCards

./: .gitignore  CMakeLists.txt
includes/scenes/: BattleScene.h  DeckSelectionScene.h  MenuScene.h  OptionsScene.h  RewardScene.h
includes/systems/: TextureManager.h
includes/ui/: Button.h  Card.h
src/: main.cpp
src/common/: Constants.h
src/core/: Game.cpp  Game.h
src/entities/: Enemy.h
src/scenes/: BattleScene.cpp  BattleScene.h  DeckSelectionScene.cpp  DeckSelectionScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  OptionsScene.cpp  RewardScene.cpp  RewardScene.h  Scene.h
src/systems/: InputManager.cpp  InputManager.h
src/ui/: Button.cpp  Button.h  Card.cpp  Card.h  CardEffect.h  Node.cpp  Node.h
